--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,7 @@
+MONGO_URI=mongodb+srv://ravi_1809:6bA7nCvZmTLObD3J@cluster0.aajyjtb.mongodb.net/
+JWT_SECRET=12345ABCDEF
+
+PORT=5001
+
+FRONTEND_URL=http://localhost:3000
 
