--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,2 @@
 MONGO_URI=mongodb+srv://RM:b5lI6kFSNLHISSV5@mycluster.o4mtq9x.mongodb.net/
+FRONTEND_URL=https://digital-school-platform-7z5x.vercel.app
